@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-06T01:19:21Z",
+  "timestamp" : "2022-05-06T08:22:27Z",
   "count_outdated" : 138,
   "uniques_outdated" : 94,
-  "count" : 193,
-  "uniques" : 124,
+  "count" : 198,
+  "uniques" : 128,
   "clones" : [
     {
       "timestamp": "2022-04-25T00:00:00Z",
@@ -46,6 +46,13 @@
       "count_minmax": [ 5, 6 ],
       "uniques": 3,
       "uniques_minmax": [ 2, 3 ]
+    },
+    {
+      "timestamp": "2022-05-06T00:00:00Z",
+      "count": 5,
+      "count_minmax": [ 0, 5 ],
+      "uniques": 4,
+      "uniques_minmax": [ 0, 4 ]
     }
   ]
 }
