@@ -1,5 +1,5 @@
 {
-  "count": 55,
+  "count": 60,
   "uniques": 16,
   "clones": [
     {
@@ -31,6 +31,11 @@
       "timestamp": "2022-05-05T00:00:00Z",
       "count": 6,
       "uniques": 3
+    },
+    {
+      "timestamp": "2022-05-06T00:00:00Z",
+      "count": 5,
+      "uniques": 4
     }
   ]
 }
