@@ -1,3 +1,9 @@
+2022-05-06T08:22:27Z:
+* notice: last 14d: all unq: 60 16
+* notice: prev accum: outdated-all outdated-unq / all unq: 138 94 / 193 124
+* notice: next accum: outdated-all outdated-unq / all unq: 138 94 / 198 128
+* notice: prev json diff // prev day diff: unq all: +4 +5 / -0 -0 // +5 +6 / -0 -0
+
 2022-04-30T16:23:26Z:
 * notice: last 14d: all unq: 17 7
 * notice: prev accum: outdated-all outdated-unq / all unq: 133 92 / 146 99
